[feature](lance) Support additional Lance and Arrow data types
Issue Number: close #66496

Related PR: #65730

Problem Summary: Lance schema discovery rejected Blob v2, Arrow JSON, BFloat16, Arrow null, and Arrow duration fields as unsupported. Add validated FE and BE mappings, materialize Blob payloads through lance-c, normalize BFloat16 values to FLOAT, preserve duration counts as BIGINT, and materialize Arrow null values safely.

Support reading Lance Blob v2, Arrow JSON, BFloat16, null, and duration columns.

- Test: Unit Test (added; not run locally at user request)

- Behavior changed: Yes (the newly supported Lance columns are queryable)

- Does this need documentation: Yes (type matrix is documented in the regression suite; user documentation follow-up is required)